@@ -5,7 +5,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.6.2'
+    classpath 'com.android.tools.build:gradle:3.6.3'
     classpath "com.github.ben-manes:gradle-versions-plugin:0.22.0"
   }
 }
