@@ -1,3 +1,7 @@
+2020-05-09 (0.12.19)
+	COMMON: Fix crash when passing non-array to CHART
+	SDL: show icon in linux build
+
 2020-05-07 (0.12.19)
 	COMMON: Fix image.save() to array destination
 
